--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,2 +1,135 @@
-@import './normalize';
-@import './colors';
+@import "./normalize";
+@import "./colors";
+@font-face {
+  font-family: "Commisioner";
+  src: url(../public/fonts/Commissioner-Medium.ttf);
+}
+
+.wrapper {
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.header {
+  display: flex;
+  margin-top: 20px;
+  &__logo {
+    cursor: pointer;
+    &_item {
+      max-width: 180px;
+      height: 100%;
+      transition: 0.5s;
+      @media (max-width: 770px) {
+        width: 120px;
+        height: 40px;
+      }
+      @media (max-width: 590px) {
+        width: 60px;
+        height: 60px;
+      }
+      @media (max-width: 450px) {
+        width: 40px;
+        height: 40px;
+      }
+    }
+    &_item:hover {
+      transform: scale(1.05);
+    }
+  }
+
+  &__search {
+    flex: 1 1 auto;
+    margin: 0 25px;
+    &_item {
+      height: 100%;
+      width: 100%;
+      border-radius: 20px;
+      border: $grey 2px solid;
+      padding-left: 20px;
+      font-family: "Commisioner";
+      font-weight: 700;
+      font-size: 20px;
+    }
+    &_item::placeholder {
+      font-family: "Commisioner";
+      font-weight: 500;
+      font-size: 18px;
+      text-align: center;
+    }
+  }
+
+  &__dropdown {
+    &_item {
+      font-family: "Commisioner";
+      font-weight: 500;
+      padding: 10px;
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      background-color: $primary;
+      color: white;
+      font-size: 16px;
+      border: none;
+      cursor: pointer;
+      transition: 0.5s;
+      @media (max-width: 770px) {
+        max-width: 120px;
+        font-size: 12px;
+      }
+      @media (max-width: 590px) {
+        width: 60px;
+        height: 100%;
+        max-height: 60px;
+        border-radius: 50%;
+        background-color: $primary-hover;
+      }
+      @media (max-width: 450px) {
+        width: 40px;
+        height: 40px;
+      }
+    }
+    &_item:hover {
+      transform: scale(1.05);
+      background-color: $primary-hover;
+    }
+    &_item span {
+      @media (max-width: 590px) {
+        display: none;
+      }
+    }
+  }
+}
+
+.grid {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 20px;
+  max-width: 1370px;
+  margin: 30px auto;
+}
+.card {
+  border: 2px solid $grey;
+  border-radius: 15px;
+  overflow: hidden;
+  &__pic {
+    object-fit: cover;
+  }
+
+  &__description {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+  }
+
+  &__avatar {
+    width: 30px;
+    height: 30px;
+  }
+
+  &__text {
+    font-family: "Commisioner";
+    font-weight: 500;
+  }
+}
