--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -117,10 +117,11 @@
 .grid {
   display: grid;
   justify-items: center;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   grid-gap: 20px;
   max-width: 1370px;
   margin: 30px auto;
+  margin-bottom: 50px;
 }
 
 .card {
@@ -129,22 +130,62 @@
   overflow: hidden;
 }
 .card__pic {
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.card__description {
+.card__author {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 30px;
   padding: 10px;
 }
-.card__avatar {
-  width: 30px;
-  height: 30px;
+.card__description {
+  text-align: center;
+  padding: 20px;
 }
 .card__text {
   font-family: "Commisioner";
   font-weight: 500;
+  font-size: 18px;
+}
+.card__avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.card__name {
+  font-family: "Commisioner";
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.button-container {
+  margin: auto;
+  margin-bottom: 30px;
+  width: 50%;
+}
+
+.grid-button {
+  font-family: "Commisioner";
+  font-weight: 500;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  background-color: rgb(230, 0, 36);
+  color: white;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.grid-button:hover {
+  transform: scale(1.05);
+  background-color: rgb(189, 8, 28);
 }
 
 @font-face {
