--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -124,6 +124,7 @@
 }
 
 .card {
+  position: relative;
   border: 2px solid rgb(190, 190, 190);
   border-radius: 15px;
   overflow: hidden;
@@ -147,7 +148,7 @@
   font-weight: 500;
 }
 
-.button {
+.cancel_button, .send_button {
   margin-top: 20px;
   padding: 5px;
   width: 70px;
@@ -156,19 +157,25 @@
   cursor: pointer;
   font-size: 16px;
 }
-.button:hover {
+.cancel_button:hover, .send_button:hover {
   background-color: bisque;
 }
-.button:active {
+.cancel_button:active, .send_button:active {
   background-color: rgb(230, 0, 36);
   color: white;
+}
+
+.click:hover, .open:hover, .add:hover, .report:hover {
+  color: bisque;
+  cursor: pointer;
+  transform: translateY(-3px);
+  transition: all 0.5s;
 }
 
 .board__selection-list {
   font-family: "Commisioner";
   font-weight: 500;
   padding: 30px;
-  height: 100%;
   background-color: rgb(230, 0, 36);
   border: rgb(190, 190, 190) 2px solid;
   border-radius: 20px;
@@ -176,31 +183,92 @@
   text-align: center;
   max-width: 320px;
   line-height: 40px;
-  max-width: 200px;
+  right: 1px;
+  position: absolute;
 }
 @media (max-width: 770px) {
   .board__selection-list {
-    width: 160px;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
   }
 }
 @media (max-width: 590px) {
   .board__selection-list {
-    width: 100px;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
   }
 }
 @media (max-width: 450px) {
   .board__selection-list {
-    width: 100px;
-    height: 100%;
+    max-width: 120px;
+    max-height: 100%;
+    font-size: 15px;
   }
 }
-.board__active {
+.board__info {
+  width: 300px;
+  max-height: 100%;
   font-family: "Commisioner";
   font-weight: 500;
   padding: 30px;
-  height: 100%;
+  background: rgb(230, 0, 36);
+  border: rgb(190, 190, 190) 2px solid;
+  border-radius: 20px;
+  color: white;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.board__info-avatar {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+.board__info-avatar:hover {
+  transform: translateY(-3px);
+  transition: all 0.5s;
+}
+.board__info-pic {
+  width: 180px;
+  height: 200px;
+}
+@media (max-width: 450px) {
+  .board__info-pic {
+    width: 100px;
+    height: 50px;
+  }
+}
+@media (max-width: 770px) {
+  .board__info {
+    max-width: 280px;
+    max-height: 100%;
+  }
+}
+@media (max-width: 590px) {
+  .board__info {
+    max-width: 220px;
+    max-height: 100%;
+    font-size: 16px;
+  }
+}
+@media (max-width: 450px) {
+  .board__info {
+    max-width: 200px;
+    max-height: 100%;
+    font-size: 15px;
+  }
+}
+.board__active {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Commisioner";
+  font-weight: 500;
+  padding: 30px;
   background-color: rgb(230, 0, 36);
   border: rgb(190, 190, 190) 2px solid;
   border-radius: 20px;
@@ -208,31 +276,34 @@
   text-align: center;
   max-width: 320px;
   line-height: 40px;
-  max-width: 250px;
+  max-width: 100%;
+  max-height: 100%;
 }
 @media (max-width: 770px) {
   .board__active {
-    width: 200px;
+    width: 100%;
     height: 100%;
   }
 }
 @media (max-width: 590px) {
   .board__active {
-    width: 160px;
+    width: 100%;
     height: 100%;
   }
 }
 @media (max-width: 450px) {
   .board__active {
-    width: 160px;
+    width: 100%;
     height: 100%;
   }
 }
 .board__report {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-family: "Commisioner";
   font-weight: 500;
   padding: 30px;
-  height: 100%;
   background-color: rgb(230, 0, 36);
   border: rgb(190, 190, 190) 2px solid;
   border-radius: 20px;
@@ -241,6 +312,7 @@
   max-width: 320px;
   line-height: 40px;
   max-width: 320px;
+  position: absolute;
 }
 @media (max-width: 770px) {
   .board__report {
@@ -260,11 +332,14 @@
     height: 100%;
   }
 }
-.board__add {
+.board__add-desk {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-family: "Commisioner";
   font-weight: 500;
   padding: 30px;
-  height: 100%;
   background-color: rgb(230, 0, 36);
   border: rgb(190, 190, 190) 2px solid;
   border-radius: 20px;
@@ -275,19 +350,19 @@
   max-width: 250px;
 }
 @media (max-width: 770px) {
-  .board__add {
+  .board__add-desk {
     width: 200px;
     height: 100%;
   }
 }
 @media (max-width: 590px) {
-  .board__add {
+  .board__add-desk {
     width: 160px;
     height: 100%;
   }
 }
 @media (max-width: 450px) {
-  .board__add {
+  .board__add-desk {
     width: 160px;
     height: 100%;
   }
