--- a/src/scss/_modalWindows.scss
+++ b/src/scss/_modalWindows.scss
@@ -1,17 +1,5 @@
-@mixin primary{
-  font-family: "Commisioner";
-  font-weight: 500;
-  padding: 30px;
-  height: 100%;
-  background-color: $primary;
-  border: $grey 2px solid;
-  border-radius: 20px;
-  color: white;
-  text-align: center;
-  max-width: 320px;
-  line-height: 40px;
-}
-.button{
+@import "./mixins";
+.cancel_button,.send_button{
     margin-top: 20px;
     padding: 5px;
     width: 70px;
@@ -19,50 +7,119 @@
     background-color: $grey;
     cursor: pointer;
     font-size: 16px;
+    
     &:hover{
-        background-color: bisque;
+      background-color: bisque;
     }
-        &:active{
-            background-color: $primary;
-            color: white;
-        }
+      
+    &:active{
+      background-color: $primary;
+      color: white;
     }
-  .board{
-    &__selection-list{
-      @include primary;
+  }
+    .click,.open,.add,.report{
+      &:hover{
+        color: bisque;
+        cursor: pointer;
+        transform:  translateY(-3px);
+        transition: all 0.5s; 
+      }
+    }
+.board{         
+  &__selection-list{
+    @include modal-primary;
+    right: 1px;
+    position: absolute;
+    @media (max-width: 770px) {
+      max-width: 100%;
+      max-height: 100%;
+    }
+    @media (max-width: 590px) {
+      max-width: 100%;
+      max-height: 100%;
+    }
+    @media (max-width: 450px) {
+      max-width: 120px;
+      max-height: 100%;
+      font-size: 15px;
+    }
+  }
+  &__info{
+    width: 300px;
+    max-height: 100%;
+    font-family: "Commisioner";
+    font-weight: 500;
+    padding: 30px;
+    background: $primary;
+    border: $grey 2px solid;
+    border-radius: 20px;
+    color: white;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    &-avatar{
+      width: 30px;
+      height: 30px;
+      cursor: pointer;
+      &:hover{
+        transform:  translateY(-3px);
+        transition: all 0.5s; 
+      }
+    }
+    &-pic{
+      width: 180px;
+      height: 200px;
+      @media (max-width: 450px) {
+      width: 100px;
+      height: 50px;
+      }
+    }
+    @media (max-width: 770px) {
+      max-width: 280px;
+      max-height: 100%;
+    }
+    @media (max-width: 590px) {
+      max-width: 220px;
+      max-height: 100%;
+      font-size: 16px;
+    }
+    @media (max-width: 450px) {
       max-width: 200px;
-      @media (max-width: 770px) {
-        width: 160px;
-        height: 100%;
+      max-height: 100%;
+      font-size: 15px;
+    }  
+  }
+  &__active{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    @include modal-primary;
+    max-width: 100%;
+    max-height: 100%;
+    @media (max-width: 770px) {
+      width: 100%;
+      height: 100%;
+    }
+    @media (max-width: 590px) {
+      width: 100%;
+      height: 100%;
       }
-      @media (max-width: 590px) {
-        width: 100px;
-        height: 100%;
-      }
-      @media (max-width: 450px) {
-        width: 100px;
-        height: 100%;
-      }
-   }
-   &__active{
-      @include primary;
-      max-width: 250px;
-      @media (max-width: 770px) {
-        width: 200px;
-        height: 100%;
-      }
-      @media (max-width: 590px) {
-        width: 160px;
-        height: 100%;
-      }
-      @media (max-width: 450px) {
-        width: 160px;
-        height: 100%;
-      }
-   }
-   &__report{
-      @include primary;
+    @media (max-width: 450px) {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  &__report{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    @include modal-primary;
       max-width: 320px;
+      position: absolute;
       @media (max-width: 770px) {
         width: 280px;
         height: 100%;
@@ -76,21 +133,24 @@
         height: 100%;
       }
    }
-   &__add{
-      @include primary;
-      max-width: 250px;
-      @media (max-width: 770px) {
-        width: 200px;
-        height: 100%;
-      }
-      @media (max-width: 590px) {
+  &__add-desk{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    @include modal-primary;
+    max-width: 250px;
+    @media (max-width: 770px) {
+    width: 200px;
+    height: 100%;
+    }
+    @media (max-width: 590px) {
+    width: 160px;
+    height: 100%;
+    }
+    @media (max-width: 450px) {
         width: 160px;
         height: 100%;
-      }
-      @media (max-width: 450px) {
-        width: 160px;
-        height: 100%;
-      }
+    }
    }
-
 }
