--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -6,11 +6,13 @@
   max-width: 1370px;
   margin: 30px auto;
 }
+
 .card {
   position: relative;
   border: 2px solid $grey;
   border-radius: 15px;
   overflow: hidden;
+  
   &__pic {
     object-fit: cover;
   }
@@ -30,5 +32,23 @@
   &__text {
     font-family: "Commisioner";
     font-weight: 500;
+  }
+
+  &__actions {
+    @include modal-primary;
+    background-color: $semi-transparent;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  &:hover .card__actions {
+    display: flex;
   }
 }
