--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   margin-top: 20px;
+
   &__logo {
     cursor: pointer;
   }
@@ -22,6 +23,7 @@
       height: 40px;
     }
   }
+
   &__logo-item:hover {
     transform: scale(1.05);
   }
@@ -30,6 +32,7 @@
     flex: 1 1 auto;
     margin: 0 25px;
   }
+
   &__search-item {
     height: 100%;
     width: 100%;
@@ -40,6 +43,7 @@
     font-weight: 700;
     font-size: 20px;
   }
+
   &__search-item::placeholder {
     font-family: "Commisioner";
     font-weight: 500;
@@ -60,10 +64,12 @@
     border: none;
     cursor: pointer;
     transition: 0.5s;
+
     @media (max-width: 770px) {
       max-width: 120px;
       font-size: 12px;
     }
+
     @media (max-width: 590px) {
       width: 60px;
       height: 100%;
@@ -71,18 +77,43 @@
       border-radius: 50%;
       background-color: $primary-hover;
     }
+
     @media (max-width: 450px) {
       width: 40px;
       height: 40px;
     }
   }
+
   &__dropdown-item:hover {
     transform: scale(1.05);
     background-color: $primary-hover;
   }
+
   &__dropdown-item span {
     @media (max-width: 590px) {
       display: none;
+    }
+  }
+
+  &__dropdown-menu {
+    @include modal-primary;
+    right: 1px;
+    position: absolute;
+
+    @media (max-width: 770px) {
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    @media (max-width: 590px) {
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    @media (max-width: 450px) {
+      max-width: 120px;
+      max-height: 100%;
+      font-size: 15px;
     }
   }
 }
