--- a/src/scss/_modalWindows.scss
+++ b/src/scss/_modalWindows.scss
@@ -1,5 +1,89 @@
-@import "./mixins";
-.cancel_button,.send_button{
+.modal-click-item {
+  &:hover{
+    color: bisque;
+    cursor: pointer;
+    transform:  translateY(-3px);
+    transition: all 0.5s; 
+  }
+}
+
+.card-modal {
+  @include modal-primary;
+  position: absolute;
+  max-width: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  &__pic {
+    width: 200px;
+    height: 300px;
+  }
+
+  &__info {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  &__desc {
+    padding-bottom: 10px;
+    border-bottom: 2px solid $grey;
+    line-height: 20px;
+  }
+
+  &__author {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  &__avatar {
+    width: 30px;
+    height: 30px;
+  }
+
+  &__name {
+    margin-left: 5px;
+    font-size: 14px;
+    line-height: 14px;
+  }
+
+  @media (max-width: 770px) {
+    
+  }
+
+  @media (max-width: 590px) {
+    
+  }
+
+  @media (max-width: 450px) {
+    
+  }
+}
+
+.report-modal {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  @include modal-primary;
+  max-width: 320px;
+  position: absolute;
+
+  @media (max-width: 590px) {
+    font-size: 14px;
+    padding: 20px;
+  }
+
+  @media (max-width: 450px) {
+    font-size: 12px;
+    padding: 10px;
+  }
+
+  &__button {
     margin-top: 20px;
     padding: 5px;
     width: 70px;
@@ -7,132 +91,20 @@
     background-color: $grey;
     cursor: pointer;
     font-size: 16px;
-    
-    &:hover{
+      
+    &:hover {  
       background-color: bisque;
     }
-      
-    &:active{
+        
+    &:active {
       background-color: $primary;
       color: white;
     }
   }
-    .click,.open,.add,.report{
-      &:hover{
-        color: bisque;
-        cursor: pointer;
-        transform:  translateY(-3px);
-        transition: all 0.5s; 
-      }
-    }
-.board{         
-  &__selection-list{
-    @include modal-primary;
-    right: 1px;
-    position: absolute;
-    @media (max-width: 770px) {
-      max-width: 100%;
-      max-height: 100%;
-    }
-    @media (max-width: 590px) {
-      max-width: 100%;
-      max-height: 100%;
-    }
-    @media (max-width: 450px) {
-      max-width: 120px;
-      max-height: 100%;
-      font-size: 15px;
-    }
-  }
-  &__info{
-    width: 300px;
-    max-height: 100%;
-    font-family: "Commisioner";
-    font-weight: 500;
-    padding: 30px;
-    background: $primary;
-    border: $grey 2px solid;
-    border-radius: 20px;
-    color: white;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    &-avatar{
-      width: 30px;
-      height: 30px;
-      cursor: pointer;
-      &:hover{
-        transform:  translateY(-3px);
-        transition: all 0.5s; 
-      }
-    }
-    &-pic{
-      width: 180px;
-      height: 200px;
-      @media (max-width: 450px) {
-      width: 100px;
-      height: 50px;
-      }
-    }
-    @media (max-width: 770px) {
-      max-width: 280px;
-      max-height: 100%;
-    }
-    @media (max-width: 590px) {
-      max-width: 220px;
-      max-height: 100%;
-      font-size: 16px;
-    }
-    @media (max-width: 450px) {
-      max-width: 200px;
-      max-height: 100%;
-      font-size: 15px;
-    }  
-  }
-  &__active{
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    @include modal-primary;
-    max-width: 100%;
-    max-height: 100%;
-    @media (max-width: 770px) {
-      width: 100%;
-      height: 100%;
-    }
-    @media (max-width: 590px) {
-      width: 100%;
-      height: 100%;
-      }
-    @media (max-width: 450px) {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  &__report{
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    @include modal-primary;
-      max-width: 320px;
-      position: absolute;
-      @media (max-width: 770px) {
-        width: 280px;
-        height: 100%;
-      }
-      @media (max-width: 590px) {
-        width: 230px;
-        height: 100%;
-      }
-      @media (max-width: 450px) {
-        width: 200px;
-        height: 100%;
-      }
-   }
+}
+
+.board {
+  
   &__add-desk{
     position: absolute;
     top: 50%;
