--- a/src/scss/_modalWindows.scss
+++ b/src/scss/_modalWindows.scss
@@ -103,26 +103,11 @@
   }
 }
 
-.board {
-  
-  &__add-desk{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    @include modal-primary;
-    max-width: 250px;
-    @media (max-width: 770px) {
-    width: 200px;
-    height: 100%;
-    }
-    @media (max-width: 590px) {
-    width: 160px;
-    height: 100%;
-    }
-    @media (max-width: 450px) {
-        width: 160px;
-        height: 100%;
-    }
-   }
+.add-to-desk-modal {
+  @include modal-primary;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 250px;
 }
