--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,11 +5,6 @@
   outline: none;
 }
 
-.wrapper {
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
 .header {
   display: flex;
   margin-top: 20px;
@@ -194,6 +189,31 @@
   font-weight: 600;
   font-size: 16px;
 }
+.card__actions {
+  font-family: "Commisioner";
+  font-weight: 500;
+  padding: 30px;
+  background-color: rgb(230, 0, 36);
+  border: rgb(190, 190, 190) 2px solid;
+  border-radius: 15px;
+  color: white;
+  text-align: center;
+  line-height: 40px;
+  background-color: rgba(0, 0, 0, 0.6);
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.card:hover .card__actions {
+  display: flex;
+}
+
 .button-container {
   margin: auto;
   margin-bottom: 30px;
