--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -99,6 +99,7 @@
     @include modal-primary;
     right: 1px;
     position: absolute;
+    z-index: 2;
 
     @media (max-width: 770px) {
       max-width: 100%;
