Added Modals Appearance

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,11 @@
   outline: none;
 }
 
+.wrapper {
+  padding: 0 30px;
+  margin: 0 auto;
+}
+
 .header {
   display: flex;
   margin-top: 20px;
@@ -248,6 +253,15 @@
   transition: all 0.5s;
 }
 
+.report-modal-wrapper, .add-to-desk-modal-wrapper, .card-modal-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
 .card-modal {
   font-family: "Commisioner";
   font-weight: 500;
@@ -259,14 +273,13 @@
   text-align: center;
   line-height: 40px;
   position: absolute;
-  max-width: 300px;
+  min-width: 700px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 .card-modal__pic {
-  width: 200px;
-  height: 300px;
+  width: 100%;
 }
 .card-modal__info {
   padding: 10px;
@@ -295,6 +308,17 @@
   font-size: 14px;
   line-height: 14px;
 }
+@media (max-width: 1136px) {
+  .card-modal {
+    min-width: 600px;
+  }
+}
+@media (max-width: 650px) {
+  .card-modal {
+    min-width: calc(100% - 60px);
+  }
+}
+
 .report-modal {
   top: 50%;
   left: 50%;
