--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -9,3 +9,12 @@
   text-align: center;
   line-height: 40px;
 }
+
+@mixin modal-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: $semi-transparent;
+}
