--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,9 +1,11 @@
 @import "./normalize";
 @import "./mixins";
 @import "./colors";
+@import "./preloader";
 @import "./header";
 @import "./grid";
 @import "./_modalWindows";
+
 @font-face {
   font-family: "Commisioner";
   src: url(../public/fonts/Commissioner-Medium.ttf);
