--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,87 @@
   margin: 0 auto;
 }
 
+.preloader-wrapper {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.preloader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: rotate 1s infinite;
+  height: 50px;
+  width: 50px;
+}
+.preloader::before {
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 20px;
+  width: 20px;
+  animation: ball1 1s infinite;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 30px 0 0 rgb(230, 0, 36);
+  margin-bottom: 10px;
+}
+.preloader::after {
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 20px;
+  width: 20px;
+  animation: ball2 1s infinite;
+  background-color: rgb(230, 0, 36);
+  box-shadow: 30px 0 0 rgb(255, 255, 255);
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg) scale(0.8);
+  }
+  50% {
+    transform: rotate(360deg) scale(1.2);
+  }
+  100% {
+    transform: rotate(720deg) scale(0.8);
+  }
+}
+@keyframes ball1 {
+  0% {
+    box-shadow: 30px 0 0 rgb(230, 0, 36);
+  }
+  50% {
+    box-shadow: 0 0 0 rgb(230, 0, 36);
+    margin-bottom: 0;
+    transform: translate(15px, 15px);
+  }
+  100% {
+    box-shadow: 30px 0 0 rgb(230, 0, 36);
+    margin-bottom: 10px;
+  }
+}
+@keyframes ball2 {
+  0% {
+    box-shadow: 30px 0 0 rgb(255, 255, 255);
+  }
+  50% {
+    box-shadow: 0 0 0 rgb(255, 255, 255);
+    margin-top: -20px;
+    transform: translate(15px, 15px);
+  }
+  100% {
+    box-shadow: 30px 0 0 rgb(255, 255, 255);
+    margin-top: 0;
+  }
+}
 .header {
   display: flex;
   margin-top: 20px;
