--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -2,7 +2,7 @@
   font-family: "Commisioner";
   font-weight: 500;
   padding: 30px;
-  background-color: $primary;
+  background-color: white;
   border: $grey 2px solid;
   border-radius: 15px;
   color: white;
