--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -6,6 +6,12 @@
   max-width: 1370px;
   margin: 30px auto;
   margin-bottom: 50px;
+  @media (max-width: 420px) {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
+  @media (max-width: 320px) {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
 }
 
 .card {
