--- a/src/scss/_modalWindows.scss
+++ b/src/scss/_modalWindows.scss
@@ -1,6 +1,6 @@
 .modal-click-item {
   &:hover{
-    color: bisque;
+    color: $primary;
     cursor: pointer;
     transform:  translateY(-3px);
     transition: all 0.5s; 
@@ -29,6 +29,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    color: black
   }
 
   &__desc {
@@ -45,8 +46,9 @@
   }
 
   &__avatar {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
   }
 
   &__name {
@@ -69,8 +71,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
   @include modal-primary;
-  max-width: 320px;
+  max-width: 350px;
+  width: 100%;
   position: absolute;
+  color: black;
 
   @media (max-width: 590px) {
     font-size: 14px;
@@ -85,14 +89,15 @@
   &__button {
     margin-top: 20px;
     padding: 5px;
-    width: 70px;
+    width: 90px;
     border-radius: 10px;
-    background-color: $grey;
+    border: none;
     cursor: pointer;
     font-size: 16px;
-      
+    background-color: $primary;
+    color: white;
     &:hover {  
-      background-color: bisque;
+      background-color: $primary-hover
     }
         
     &:active {
@@ -104,9 +109,11 @@
 
 .add-to-desk-modal {
   @include modal-primary;
+  color: black;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 250px;
+  max-width: 350px;
+  width: 100%;
 }
