--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -6,9 +6,11 @@
   max-width: 1370px;
   margin: 30px auto;
   margin-bottom: 50px;
+
   @media (max-width: 420px) {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   }
+
   @media (max-width: 320px) {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
@@ -33,6 +35,7 @@
     gap: 30px;
     padding: 10px;
   }
+  
   &__description {
     text-align: center;
     padding: 20px; 
@@ -94,7 +97,7 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
-    transition: 0.5s;
+    transition: transform 0.5s;
 
     &:hover {
       transform: scale(1.05);
