--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,6 +2,7 @@
   display: flex;
   margin-top: 20px;
   padding: 0 15px;
+  
   @media (max-width: 450px) {
     padding: 0;
   }
@@ -13,23 +14,26 @@
   &__logo-item {
     max-width: 180px;
     height: 100%;
-    transition: 0.5s;
+    transition: transform 0.5s;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+
     @media (max-width: 770px) {
       width: 120px;
       height: 40px;
     }
+
     @media (max-width: 590px) {
       width: 60px;
       height: 60px;
     }
+
     @media (max-width: 450px) {
       width: 40px;
       height: 40px;
     }
-  }
-
-  &__logo-item:hover {
-    transform: scale(1.05);
   }
 
   &__search {
@@ -49,13 +53,13 @@
     font-family: "Commisioner";
     font-weight: 700;
     font-size: 20px;
-  }
 
-  &__search-item::placeholder {
-    font-family: "Commisioner";
-    font-weight: 500;
-    font-size: 18px;
-    text-align: center;
+    &::placeholder {
+      font-family: "Commisioner";
+      font-weight: 500;
+      font-size: 18px;
+      text-align: center;
+    }
   }
 
   &__dropdown-item {
@@ -70,7 +74,18 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
-    transition: 0.5s;
+    transition: transform 0.5s;
+
+    &:hover {
+      transform: scale(1.05);
+      background-color: $primary-hover;  
+    }
+
+    span {
+      @media (max-width: 590px) {
+        display: none;
+      }
+    }
 
     @media (max-width: 770px) {
       max-width: 120px;
@@ -88,17 +103,6 @@
     @media (max-width: 450px) {
       width: 40px;
       height: 40px;
-    }
-  }
-
-  &__dropdown-item:hover {
-    transform: scale(1.05);
-    background-color: $primary-hover;
-  }
-
-  &__dropdown-item span {
-    @media (max-width: 590px) {
-      display: none;
     }
   }
 
