--- a/src/scss/_modalWindows.scss
+++ b/src/scss/_modalWindows.scss
@@ -3,7 +3,7 @@
     color: $primary;
     cursor: pointer;
     transform:  translateY(-3px);
-    transition: all 0.5s; 
+    transition: transform 0.5s; 
   }
 }
 
